<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.app.AppFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/power_indicator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="40dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:rotation="180"
            app:indicatorSize="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="#4D7f7f7f"
            app:trackThickness="10dp" />

        <TextView
            android:id="@+id/power_indicator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/power_indicator"
            app:layout_constraintEnd_toEndOf="@+id/power_indicator"
            app:layout_constraintStart_toStartOf="@+id/power_indicator"
            app:layout_constraintTop_toTopOf="@+id/power_indicator" />

        <TextView
            android:id="@+id/boiler_power_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/boiler_indicator_title"
            app:layout_constraintEnd_toEndOf="@+id/power_indicator"
            app:layout_constraintStart_toStartOf="@+id/power_indicator"
            app:layout_constraintTop_toBottomOf="@+id/power_indicator" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/power_indicator" />

        <LinearLayout
            android:id="@+id/shot_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/power_indicator">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shot_timer_title" />

            <TextView
                android:id="@+id/shot_timer_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/shot_timer_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:textSize="16sp" />

            <Button
                android:id="@+id/shot_timer_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/chart_labels"
                android:text="@string/shot_timer_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/power_indicator">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp_view_title" />

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setpoint_view_title" />

            <it.sephiroth.android.library.numberpicker.NumberPicker
                app:picker_max="125"
                app:picker_min="50"
                android:progress="101"
                app:picker_editTextStyle="@style/Theme.MyBarister.SetpointPickerEditText"
                app:picker_stepSize="0.5"
                app:picker_tracker="linear"
                android:background="@android:color/transparent"
                app:picker_orientation="vertical"
                app:picker_disableGestures="false"
                android:id="@+id/setpointPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/status_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>